Singleton with generics for controllers, services and repositories
