# backend/docs/swagger.json
@@ -390,7 +390,7 @@
                     "type": "string"
                 },
                 "type": {
-                    "type": "string"
+                    "$ref": "#/definitions/event.Type"
                 },
                 "updatedAt": {
                     "type": "string"
@@ -399,6 +399,31 @@
                     "type": "string"
                 }
             }
+        },
+        "event.Type": {
+            "type": "string",
+            "enum": [
+                "RECEIVED_RF",
+                "SEND_RF",
+                "MQTT_CONNECTED",
+                "RESTART",
+                "RESET",
+                "SET_CONFIG",
+                "GET_CONFIG",
+                "GET_INFO",
+                "ACTION_UNRECOGNIZED"
+            ],
+            "x-enum-varnames": [
+                "RECEIVED_RF",
+                "SEND_RF",
+                "MQTT_CONNECTED",
+                "RESTART",
+                "RESET",
+                "SET_CONFIG",
+                "GET_CONFIG",
+                "GET_INFO",
+                "ACTION_UNRECOGNIZED"
+            ]
         },
         "response.Response": {
             "type": "object",
